Fixed body container overlapping body

--- a/main.css
+++ b/main.css
@@ -4,21 +4,22 @@
     box-sizing: border-box;
 }
 body {
-    height: 100vh;
     font-family: sans-serif;
 }
 .container {
     background-color: rgba(34, 101, 104, 0.397);
-    height: 100%;
+    min-height: 100vh;
     display: grid;
     place-items: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
 }
 .row {
     background-color: rgba(245, 245, 245, 0.212);
     box-shadow: 8px 8px 8px rgba(169, 169, 169, 0.24);
     width: 100%;
     max-width: 500px;
-    height: 400px;
+    min-height: 400px;
     padding: .8rem;
 
 }
@@ -27,6 +28,7 @@ body {
     text-align: center;
     font-size: 3rem;
     font-weight: lighter;
+    margin-bottom: 1rem;
 }
 .input-group {
     display: flex;
